# file-classifier

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PROMPT_IMPROVEMENTS.md  README.md  TODO.yml  classify.sh  dev-requirements.txt  docker-compose.yml  logging_config.py  main.py  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: pylint.yml  python-app.yml
.warp/workflows/: setup-python-dev.yaml
prompts/: classification-agent-system.txt  classification-agent-system.xml  classification-agent-user.txt  classification-agent-user.xml  conflict-resolution-agent-system.txt  conflict-resolution-agent-system.xml  conflict-resolution-agent-user.txt  conflict-resolution-agent-user.xml  file-analysis-system-prompt.txt  file-analysis-user-prompt.txt  path-construction-agent-system.txt  path-construction-agent-system.xml  path-construction-agent-user.txt  path-construction-agent-user.xml  standards-enforcement-agent-system.txt  standards-enforcement-agent-system.xml  standards-enforcement-agent-user.txt  standards-enforcement-agent-user.xml
resources/: agent-definitions.xml  document-archival-system-design.md
scripts/: detect_benchmark_targets.py  generate_baseline.sh  run_performance_gate.sh  update_baseline.sh
src/agents/: __init__.py  classification.py  conflict_resolution.py  path_construction.py  pipeline.py  standards.py
src/ai/: __init__.py  client.py  factory.py  prompts.py
src/ai_file_classifier/: __init__.py  ai_client.py  config.py  file_analyzer.py  file_inventory.py  folder_recommender.py  logging_config.py  models.py  prompt_loader.py  prompt_manager.py  text_extractor.py  utils.py
src/analysis/: __init__.py  analyzer.py  filename.py  models.py
src/cli/: __init__.py  arguments.py  display.py  workflow.py
src/config/: cache_config.py  logging.py  logging_config.py  settings.py
src/files/: __init__.py  extractors.py  langchain_loader.py  operations.py  processor.py
src/naming/: __init__.py  compact_gpo.py  descriptive_nara.py  registry.py  styles.py  utils.py
src/output/: __init__.py  formatter.py  models.py
src/path/: __init__.py  builder.py
src/recommendations/: __init__.py  recommender.py
src/storage/: __init__.py  cache.py  database.py
src/taxonomy/: __init__.py
taxonomies/: household.yaml
tests/: README.md  conftest.py  test_ai_client.py  test_cache_config.py  test_file_analyzer.py  test_file_inventory.py  test_prompt_loader.py  test_prompt_manager.py  test_text_extractor.py  test_utils.py
tests/agents/: test_pipeline_taxonomy.py
tests/ai/: conftest.py  test_client.py  test_factory.py  test_prompts.py
tests/analysis/: test_analyzer.py
tests/benchmarks/: conftest.py
tests/cli/: test_arguments.py
tests/config/: test_logging.py
tests/files/: test_extractors.py  test_langchain_loader.py  test_operations.py  test_processor.py
tests/functional/: __init__.py  test_e2e.py
tests/output/: test_formatter.py  test_models.py
(+12 files in other folders)
